--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 <p style="color:green">@ViewBag.hata</p>
-<a href="@Url.Action("deneme","Home")" target="_blank">denemeye git</a>
+<a href="@Url.Action("deneme","Home")" target="_blank">denemeye git metin</a>
 <br>
 <a href="@Url.Action("login","Home")">Gİriş yap kardeş</a>
 
