--- a/Views/Home/login.cshtml
+++ b/Views/Home/login.cshtml
@@ -1,10 +1,21 @@
+@{
+    ViewData["Title"] = "Home Page";
+    Layout= "_Layout";
+}
 <p style="color: red;">@ViewBag.hata</p>
 
-@using (Html.BeginForm("Login", "Home", FormMethod.Post, new {@class="form-horizontal"}))   
+@using (Html.BeginForm("Login", "Home", FormMethod.Post, new {@class="form-horizontal col-md-9", style="margin:auto; position:relative"}))   
 {
-    <div class="">örnek div</div>
-    <input type="text" name="username">
-    <input type="password" name="password">
+    <div class="form-group">
+        <label class="control-label"> Kullanıcı Adınız </label>
+        <input type="text" name="username" class="form-control">
+    </div>
+    
+    <div class="form-group">
+        <label class="control-label"> Şifreniz  </label>
+        <input type="password" name="password" class="form-control">
+    </div>
+    
 
-    <input type="submit" value="gönder">
+    <input type="submit" value="Giriş Yap" class="btn btn-primary">
 }
